# castle

./: .dockerignore  .gitignore  Cargo.toml
.github/workflows/: minecraft.yml
bins/lemonade/: Cargo.toml
bins/lemonade/src/: config.rs  main.rs  nordigen.rs
configs/: PklProject  PklProject.deps.json  local.pkl  prod.pkl
libs/config/examples/: simple.rs
libs/config/src/: argument_parse_error.rs  config.rs  from_arg.rs  from_config.rs  lib.rs  parse_config_from_env_error.rs  rename_config_error.rs
libs/config_macro/src/: lib.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
pkl/castle/: Castle.pkl  PklProject  PklProject.deps.json
pkl/castle/lemonade/: Backend.pkl  Database.pkl  DatabaseSecret.pkl  Lemonade.pkl
pkl/castle/waypointer/: Waypointer.pkl
pkl/easy-k8s/: App.pkl  Component.pkl  Group.pkl  Part.pkl  PklProject  PklProject.deps.json  Secret.pkl
pkl/random/: PklProject  Random.pkl
rust/: .dockerignore  Cargo.toml  Dockerfile
rust/api/: Cargo.toml
rust/api/migrations/: 20241003161249_create_table_users.up.sql  20241003165457_create_table_sessions.up.sql  20241013192629_add_roles.down.sql  20241013192629_add_roles.up.sql  20241013193751_create_root_user.down.sql  20241013193751_create_root_user.up.sql  20241024210915_create_nordigen_tokens.down.sql  20241024210915_create_nordigen_tokens.up.sql
rust/api/src/: main.rs  model.rs  nordigen.rs  store.rs
rust/api/src/routes/: mod.rs  sessions.rs  users.rs
rust/composer/: Cargo.toml  addition.comp  build.rs
rust/composer/src/: ast.rs  grammar.lalrpop  interpreter.rs  main.rs
rust/config/: Cargo.toml
rust/config/examples/: file.rs  simple.rs
rust/config/src/: argument_parse_error.rs  from_arg.rs
rust/config_macro/: Cargo.toml
rust/config_macro/src/: lib.rs
rust/constrained_str/: Cargo.toml
rust/constrained_str/src/: lib.rs
rust/error/: Cargo.toml
rust/error/src/: lib.rs
rust/error/src/extensions/: error.rs  infallible_result.rs  mod.rs  result.rs
rust/error/src/http/: http_error.rs
rust/future_utils/: Cargo.toml
rust/future_utils/src/: lib.rs  restart.rs
rust/future_utils/src/extensions/: cancellation_token.rs  mod.rs
rust/http_api/: Cargo.toml
rust/http_api/openapi_specifications/: nordigen.json
rust/http_api/src/: lib.rs  nordigen.rs
rust/lemonade/: Cargo.toml
rust/lemonade/migrations/: 20240317205117_create_schema.down.sql  20240317205117_create_schema.up.sql  20240317205135_create_user.down.sql  20240317205135_create_user.up.sql
rust/lemonade/src/: config.rs  main.rs
rust/lemonade/src/api/: mod.rs
rust/lemonade/src/api/graphql/: institution.rs  mod.rs  user.rs
rust/lemonade/src/model/: mod.rs
rust/lemonade/src/nordigen_token_client/: acquire_error.rs  mod.rs  refresh_error.rs
rust/lemonade/src/token_manager/: access_and_refresh_token.rs  mod.rs  secret.rs  token.rs  token_client.rs  token_manager.rs
rust/lemonade_api/: Cargo.toml
rust/lemonade_api/src/: main.rs
rust/lemonade_api/src/domain/: mod.rs
rust/lemonade_api/src/domain/lemonade/: service.rs
rust/lemonade_api/src/domain/lemonade/models/: mod.rs
rust/lemonade_api/src/domain/lemonade/ports/: lemonade_service.rs  mod.rs  random_provider.rs  store.rs
rust/lemonade_api/src/inbound/http/: app_state.rs  error.rs  mod.rs
rust/lemonade_api/src/inbound/http/extractors/: authentication.rs
rust/lemonade_api/src/inbound/http/handlers/: mod.rs
rust/lemonade_api/src/inbound/http/handlers/me/: mod.rs
rust/lemonade_api/src/inbound/http/handlers/me/get/: mod.rs
rust/lemonade_api/src/inbound/http/handlers/me/get/dto/: error.rs  mod.rs  response.rs
rust/lemonade_api/src/macros/: into_http_error.rs  mod.rs  new_str.rs
rust/lemonade_api/src/outbound/: in_memory_repository.rs  mod.rs  random.rs
rust/logger/: Cargo.toml
rust/logger/src/: lib.rs
rust/nordigen_service/: Cargo.toml
rust/nordigen_service/src/: lib.rs  nordigen_service.rs  system.rs  token_manager.rs
rust/nordigen_service/src/adapters/outgoing/: mod.rs
rust/nordigen_service/src/adapters/outgoing/nordigen/: account.rs  ids.rs  institution.rs  mod.rs  page.rs  requisition.rs  secret.rs  token.rs  transaction.rs
rust/nordigen_service/src/adapters/outgoing/nordigen/implementation/: http.rs
rust/projects/lemonade/api/: Cargo.toml
rust/projects/lemonade/api/src/: lib.rs  sessions.rs  users.rs
rust/projects/lemonade/db/: Cargo.toml
rust/projects/lemonade/db/src/: lib.rs  nordigen_tokens.rs  roles.rs  sessions.rs  users.rs
rust/projects/lemonade/db/src/tables/: mod.rs  nordigen_tokens.rs  roles.rs  sessions.rs  users.rs
rust/projects/lemonade/db/src/types/: role.rs
rust/projects/lemonade/lemonade/: Cargo.toml
rust/projects/lemonade/lemonade/src/: main.rs
rust/projects/lemonade/model/: Cargo.toml
rust/projects/lemonade/model/src/: lib.rs
rust/projects/lemonade/nordigen/: Cargo.toml
rust/projects/lemonade/nordigen/src/: lib.rs
rust/sync_utils/: Cargo.toml
rust/sync_utils/src/: watch.rs
rust/waypointer/: Cargo.toml
services/lemonade/: .dockerignore  Dockerfile  compose.yaml
services/lemonade/src/: config.rs  main.rs  token_manager.rs
services/minecraft/: Dockerfile  compose.yaml  eula.txt  server.properties
services/waypointer/: Cargo.toml
services/waypointer/src/: config.rs
stacks/lemonade/: compose.yaml
stacks/minecraft/: compose.yaml
stacks/waypointer/: local.yaml
