[package]
name = "lemonade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "uuid", "chrono", ] }
chrono = "0.4.31"
uuid = "1.5.0"
reqwest = { version = "0.11.22", default-features = false,features = ["rustls-tls", "json"] }
either = "1.9.0"
serde_json = "1.0.108"
maplit = "1.0.2"
serde = { version = "1.0.192", features = ["alloc"] }
thiserror = "1.0.50"
