[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
uuid = { version = "1.10.0", features = ["serde", "v7"] }
thiserror = "1.0.64"
futures = "0.3.30"
derive_more = { version = "1.0.0", features = ["into"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
error = { path = "../error" }
partially = { version = "0.2.1", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "runtime-tokio", "chrono"] }
base64 = "0.22.1"
orion = "0.17.7"
snafu = { version = "0.8.5", features = [] }
async-stream = "0.3.6"
reqwest = { version = "0.12.8", features = ["json"] }
chrono = "0.4.38"
