[package]
name = "lemonade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "uuid", "chrono", ] }
chrono = "0.4.31"
thiserror = "1.0.50"
config = { path = "../config" }
error = { path = "../error" }
http_api = { path = "../http_api" }
