[package]
name = "nordigen_service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
constrained_str = { path = "../constrained_str" }
error = { path = "../error" }
sync_utils = { path = "../sync_utils" }
url = { version = "2.5.2", features = ["serde"] }
isolanguage-1 = "0.2.2"
iso_currency = { version = "0.5.0", features = ["with-serde"] }
iso_country = { version = "0.1.4", features = ["serde"] }
rust_decimal = "1.36.0"
iban_validate = { version = "4.0.1", features = ["serde"] }
tokio = { version = "1.40.0", features = ["sync", "rt", "time", "macros"] }
tokio-util = "0.7.12"
thiserror = "1.0.63"
tokio-stream = "0.1.16"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["rustls-tls", "json"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
async-stream = "0.3.5"
http = "1.1.0"
