[package]
name = "lemonade"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.9"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
lemonade_nordigen = { path = "../nordigen" }
snafu = "0.8.5"
axum = "0.7.7"
sqlx = { version = "0.8.2", features = ["postgres"] }
lemonade_api = { path = "../api" }
lemonade_model = { path = "../model" }
lemonade_db = { path = "../db" }
